# yahoo-fantasy-baseball-analyzer

./: .gitignore  1.21.0  Dockerfile  Dockerfile.weekly  Fantasy_Baseball_Scoring_Methodology.doc  Fantasy_Baseball_Scoring_Methodology.md  Live Standings for Yahoo Fantasy Baseball.docx  Procfile  README.md  cdk.json  cdk_app.py  comprehensive_team_stats.gsheet  datetime_utils.py  deploy.py  deploy_aws.py  deploy_simple.py  docker-compose.weekly.prod.yml  docker-compose.weekly.yml  get_power_rankings.py  get_season_trend_power_ranks.py  get_season_trend_standings.py  gitSync.bat  mongo_utils.py  railway.json  requirements.txt  setup.cfg  setup.py  test_lambda.py  week5_recalc.xlsx  weekly_updates.py
AWS/: DEPLOYMENT.md  Dockerfile  lambda_handler.py  license.txt  targets-live.json  targets.json
YahooFantasyBaseball/: .gitignore  2021_Draft.csv  Batters_Dict.csv  Current_Stats.csv  Pitchers_Dict.csv  PlayerIDMap.csv  Player_Dictionary.csv  Results.csv  Week5_Recalc.csv  batterStats.py  coefficient.csv  datetime_utils.py  draft_analysis.csv  email_utils.py  exportCSV.py  export_csv.py  fbb_2022.pem  getAllPlay.py  getDraftResults.py  getLeagueHistory.py  getLiveStandings.py  getPowerRankings.py  getPull.bat  getSeasonTrend_PowerRanks.py  getSeasonTrend_Standings.py  get_all_play.py  get_live_standings.py  get_power_rankings.py  get_season_trend_power_ranks.py  get_season_trend_standings.py  gitSync.bat  license.txt  mongo_utils.py  pitcherStats.py  playerStats_DraftAnalysis.py  power_ranks.csv  power_ranks_season_trend.csv  requirements.txt  standings_season_trend.csv  (+3 more)
(+54 files in other folders)
