[metadata]
name = yahoo-fantasy-baseball-analyzer
author = Taylor Ward
author_email = taylorreeseward@gmail.com
description = This python web scraping project will help you aggregate your Yahoo Fantasy Baseball League stats and create datasets for power rankings, season trends, and live standings. Additionally, it will create an expected wins dataset to give you an idea of an All-Play record on a week-by-week basis. This project has been created to write to a MongoDB but can be edited to use any database technology you would like.
long_description = file: README.md
license = MIT
url = https://github.com/hotlikesauce/yahoo-fantasy-baseball-analyzer

[options]
install_requires = 
	    beautifulsoup4==4.11.1
	    certifi==2022.9.24
	    pandas==1.5.1
	    pymongo==4.2.0
	    python-dotenv==1.0.0
	    requests==2.31.0
	    setuptools==58.1.0

[options.packages.find]
where = src